banner flickering issue

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -8,6 +8,7 @@
     background-repeat: no-repeat;
     background-position: 50%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     overflow: hidden;
     .inner{
